istio/cyber-range-stage/DRtemplates/istio-ingress-external-dr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: octavia  # Use Octavia Ingress Controller class name
    octavia.ingress.kubernetes.io/actions.default: "{\"Type\":\"fixed-response\",\"FixedResponseConfig\":{\"ContentType\":\"application/json\",\"StatusCode\":\"403\",\"MessageBody\":\"{ \\\"code\\\" : 403, \\\"message\\\" : \\\"The requested URI is forbidden, please use the correct URI\\\"  }\"}}"
    octavia.ingress.kubernetes.io/actions.istio-ingressgateway: |
      {"Type":"forward","ForwardConfig":{"TargetGroups":[{"ServiceName":"istio-ingressgateway","ServicePort":"80","Weight":100}]}}
    octavia.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    octavia.ingress.kubernetes.io/healthcheck-path: /healthz/ready
    octavia.ingress.kubernetes.io/healthcheck-port: "32765"
    octavia.ingress.kubernetes.io/healthcheck-protocol: HTTP
    octavia.ingress.kubernetes.io/inbound-cidrs: 0.0.0.0/0
    octavia.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    octavia.ingress.kubernetes.io/scheme: internet-facing
    octavia.ingress.kubernetes.io/subnets: subnet-042b219e44cf0f5d7, subnet-072c6e7af8397a3ef,subnet-04a917138a60ec9e6
  name: tam-range-stage-istio-ingress-external
  namespace: istio-system
spec:
  defaultBackend:
    service:
      name: default
      port:
        name: use-annotation
  rules:
    - http:
        paths:
          - backend:
              service:
                name: istio-ingressgateway
                port:
                  name: use-annotation
            path: /*
            pathType: ImplementationSpecific
