istio/cyber-range-stage/DRtemplates/istio-ingress-internal-dr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: octavia  # Use Octavia Ingress Controller class name
    octavia.ingress.kubernetes.io/actions.default: "{\"Type\":\"fixed-response\",\"FixedResponseConfig\":{\"ContentType\":\"application/json\",\"StatusCode\":\"403\",\"MessageBody\":\"{ \\\"code\\\" : 403, \\\"message\\\" : \\\"The requested URI is forbidden, please use the correct URI\\\"  }\"}}"
    octavia.ingress.kubernetes.io/actions.istio-ingressgateway: |
      {"Type":"forward","ForwardConfig":{"TargetGroups":[{"ServiceName":"istio-ingressgateway","ServicePort":"80","Weight":100}]}}
    octavia.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    octavia.ingress.kubernetes.io/group.name: istio-internal-ingressgateway
    octavia.ingress.kubernetes.io/healthcheck-interval-seconds: "10"
    octavia.ingress.kubernetes.io/healthcheck-path: /healthz/ready
    octavia.ingress.kubernetes.io/healthcheck-port: "30400"
    octavia.ingress.kubernetes.io/healthcheck-protocol: HTTP
    octavia.ingress.kubernetes.io/inbound-cidrs: 10.20.0.0/16
    octavia.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    octavia.ingress.kubernetes.io/scheme: internal
  name: tam-range-stage-istio-ingress-internal
  namespace: istio-system
spec:
  defaultBackend:
    service:
      name: default
      port:
        name: use-annotation
  rules:
    - http:
        paths:
          - backend:
              service:
                name: istio-ingressgateway
                port:
                  name: use-annotation
            path: /*
            pathType: ImplementationSpecific
